--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 
+
 /* 
     -- Table of Content --
 
@@ -30,6 +31,46 @@
     * @Keyframe
 
 */
+
+/* Add this CSS to your existing styles */
+.menu.scroll-nav li a.active {
+    color:  var(--primary_color); /* Set the desired color for the active link text */
+  }
+  
+  .menu.scroll-nav li a.active i {
+    color: var(--colorWhite); /* Set the desired color for the active icon */
+  }
+/* Define the animation keyframes */
+/* Define the animation keyframes */
+@keyframes slideUpFromBottom {
+    0% {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  /* Initially hide the elements */
+  .animate-bottom {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  
+  /* Apply the animation when the 'animate' class is added */
+  .animate-bottom.animate {
+    animation: slideUpFromBottom 1s ease-out forwards;
+  }
+  
+  /* Maintain the final state after the animation */
+  .animate-bottom.animate.animated {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+/* ********************************** */
 
 :root {
     --colorWhite:#f1f1f1;
@@ -1128,8 +1169,8 @@ p.scroll-animation{
     align-items: center;
     justify-content: center;
     margin-left: auto;
-    border-radius: 50%;
-    border: 1px solid #575757;
+    /* border-radius: 50%;
+    border: 1px solid #575757; */
     position: relative;
     overflow: hidden;
     margin-right: 15px;
@@ -1307,9 +1348,7 @@ div.col-xl-9.col-lg-9{
 }
 
 
-.tf__about_2{
-    margin-bottom: 5rem;
-}
+
 /* Base styles */
 .tf__about_2 .tf__section_heading h2 {
     text-align: left;
@@ -5378,4 +5417,14 @@ img.mfp-img {
 }
 .works-item span {
 	color: var(--tj-grey-1);
+}
+/* ***************************************animation */
+.animate {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+.animate.in-view {
+    opacity: 1;
+    transform: translateY(0);
 }
